fixed the overlay setuip and finalized view log styling and spacing

--- a/DailyLog/src/Dashboard/Dashboard.module.css
+++ b/DailyLog/src/Dashboard/Dashboard.module.css
@@ -21,7 +21,7 @@
 }
 
 .dashboard-header{
-    letter-spacing: 1.65rem;
+    letter-spacing: 0.422rem;
 }
 
 .time{
