--- a/DailyLog/src/ViewLogs/ViewLogs.module.css
+++ b/DailyLog/src/ViewLogs/ViewLogs.module.css
@@ -33,11 +33,12 @@
 }
 
 .card-container{
-    border: 1px solid yellow;
-
-    /* THIS IS JUST TO CREATE EFFECT */
-    height: 250px;
+    height: auto;
+    min-height: 6rem;
     width: 88%;
     margin: 1rem 0px;
-    padding: 50%;
+    padding: 0.88rem;
+    background-color: rgb(4,22,88);
+    border: 1px solid white;
+    box-shadow: 0px 5px 20px 3px black;
 }
